--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: "404: Page not found"
+title: "404 - page not found"
 permalink: 404.html
 ---
 
 
 
-Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. 
+Woooops, there is nothing here, but that does not mean that there will never ever be anything here or that there could not heve beed something.
 
-
+Please come again in another moment or try to find in a pararell universe.
