--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ permalink: 404.html
 
 
 
-Woooops, there is nothing here, but that does not mean that there will never ever be anything here or that there could not heve beed something.
+<p>Woooops, there is nothing here, but that does not mean that there will never ever be anything here or that there could not heve beed something.</p>
 
-Please come again in another moment or try to find in a pararell universe.
+<p>Please come again in another moment or try to find in a pararell universe.</p>
