pieces of concrete

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@ layout: default
             <div></div>
         </button>
     </div>
-    <p>I'm a digital artist and creator
+    <p>I make creations mostly with a computer. I
     </p>
 </section>
 
 <section class="posts">
-    <h3>BLOG</h3>
     <ul>
         {% for post in site.posts %}
         <li>
