--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ layout: default
             <div></div>
         </button>
     </div>
-    <p>I make creations mostly with a computer. I
-    </p>
+    <p>I make things with a computer</p>
+    <p>My interest is focused on the conception of the world as a system made up of infinite subsystems - abstract and concrete. Non-linear systems are of special relevance to me and, within them, artificial intelligent systems.</p>
+    <p>I pay attention to the way of perceiving and understanding the world of current intelligent systems (mainly neural networks), emphasizing the gap that exists with human perception and walking it through an annexing bridge that is evidenced in the form of mathematical objects and concepts such as learning, maps and evolutionary change.</p>
 </section>
 
 <section class="posts">
